# covariance-steering-pdstl

./: ARCHITECTURE.md  Makefile  README.md  main.py  maths_reference.md  pyproject.toml  slides.qmd  slides_theme.scss
configs/: defaults.yaml
configs/dynamics/: double_integrator.yaml  single_integrator.yaml
configs/scenarios/: double_slit.yaml  lane_change.yaml  narrow_gap.yaml  narrow_gap_single_shot.yaml  obstacle_field.yaml
src/: experiments.py  monte_carlo.py
src/dynamics/: __init__.py  base.py  double_integrator.py  single_integrator.py
src/planning/: __init__.py  base.py  environment.py  mpc.py  objective.py  receding_horizon.py  single_shot.py
src/steering/: __init__.py  base.py  closed_loop.py  open_loop.py
src/stl/: __init__.py  base.py  operators.py  predicates.py
src/utils/: __init__.py  config.py  noise.py
src/visualization/: __init__.py  animation.py  comparison.py  convergence.py  monte_carlo.py  sweep.py  trajectory.py
tests/: test_dynamics.py  test_monte_carlo.py  test_operators.py  test_steering.py
